[gd_scene load_steps=14 format=2]

[ext_resource path="res://levels/presov/BMapParalax.gd" type="Script" id=1]
[ext_resource path="res://assets/bg2/PresovParalax-4.png" type="Texture" id=2]
[ext_resource path="res://assets/bg2/PresovParalax-2.png" type="Texture" id=3]
[ext_resource path="res://bg_leto_02.png" type="Texture" id=4]
[ext_resource path="res://assets/bg2/PresovParalax-6.png" type="Texture" id=5]
[ext_resource path="res://assets/bg2/PresovParalax-3.png" type="Texture" id=6]
[ext_resource path="res://assets/bg2/PresovParalax-5.png" type="Texture" id=7]
[ext_resource path="res://assets/bg2/levels.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/lock_closed.png" type="Texture" id=9]
[ext_resource path="res://assets/icons/number_1.png" type="Texture" id=10]
[ext_resource path="res://assets/icons/number_4.png" type="Texture" id=11]
[ext_resource path="res://assets/icons/number_2.png" type="Texture" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 146.123

[node name="Paralax" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2( -76.4999, 36 )
scale = Vector2( 2.00677, 2.02462 )
texture = ExtResource( 4 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
visible = false
texture = ExtResource( 3 )

[node name="no1" type="Node2D" parent="ParallaxBackground/ParallaxLayer"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer/no1"]
position = Vector2( 62, -552 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer/no1"]
visible = false
position = Vector2( 58, -543 )
scale = Vector2( 4.47222, 4.47222 )
texture = ExtResource( 10 )

[node name="no2" type="Node2D" parent="ParallaxBackground/ParallaxLayer"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer/no2"]
position = Vector2( 151, -552 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer/no2"]
visible = false
position = Vector2( 158, -543 )
scale = Vector2( 4.47222, 4.47222 )
texture = ExtResource( 12 )

[node name="no3" type="Node2D" parent="ParallaxBackground/ParallaxLayer"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer/no3"]
position = Vector2( 247, -552 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/ParallaxLayer/no3"]
visible = false
position = Vector2( 254, -543 )
scale = Vector2( 4.47222, 4.47222 )
texture = ExtResource( 11 )

[node name="no4" type="Node2D" parent="ParallaxBackground/ParallaxLayer"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer/no4"]
position = Vector2( 351, -551 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sprite5" type="Sprite" parent="ParallaxBackground/ParallaxLayer/no4"]
visible = false
position = Vector2( 354, -543 )
scale = Vector2( 4.47222, 4.47222 )
texture = ExtResource( 10 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.4, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 6 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.5, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 2 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.7, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource( 7 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.9, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
texture = ExtResource( 5 )

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer7"]
texture = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="ParallaxBackground/ParallaxLayer7/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D"]
position = Vector2( -1740, -347 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="ParallaxBackground/ParallaxLayer7/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D2"]
position = Vector2( -1279, 26 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D2"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( -1279, 233 )
texture = ExtResource( 9 )

[node name="Area2D3" type="Area2D" parent="ParallaxBackground/ParallaxLayer7/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D3"]
position = Vector2( -442, -197 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D3"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( -425, 19 )
texture = ExtResource( 9 )

[node name="Area2D4" type="Area2D" parent="ParallaxBackground/ParallaxLayer7/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D4"]
position = Vector2( 575, 109 )
shape = SubResource( 1 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D4"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 579, 319 )
texture = ExtResource( 9 )

[node name="Area2D5" type="Area2D" parent="ParallaxBackground/ParallaxLayer7/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D5"]
position = Vector2( 1624, 272 )
shape = SubResource( 1 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D5"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1633, 476 )
texture = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1600, 0 )
current = true
limit_left = -2000
limit_right = 2000
smoothing_enabled = true

[connection signal="input_event" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D" to="." method="_on_Area2D1_input_event"]
[connection signal="mouse_entered" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="input_event" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="mouse_entered" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D2" to="." method="_on_Area2D_mouse_entered"]
[connection signal="input_event" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D3" to="." method="_on_Area2D3_input_event"]
[connection signal="mouse_entered" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D3" to="." method="_on_Area2D_mouse_entered"]
[connection signal="input_event" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D4" to="." method="_on_Area2D4_input_event"]
[connection signal="mouse_entered" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D4" to="." method="_on_Area2D_mouse_entered"]
[connection signal="input_event" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D5" to="." method="_on_Area2D5_input_event"]
[connection signal="mouse_entered" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D5" to="." method="_on_Area2D_mouse_entered"]
